test: configure Mockito as Java agent (#814)
* test: configure Mockito as Java agent

* test: resolve Mockito agent lazily